Group text color fix, readable color directive

--- a/src/app/groups/groups-list/groups-list.component.css
+++ b/src/app/groups/groups-list/groups-list.component.css
@@ -1,3 +1,16 @@
+li {
+    margin-bottom: 15px;
+}
+
+li input {
+    margin-right: 10px;
+}
+
+li label {
+    padding: 5px;
+    border-radius: 3px;
+}
+
 li .actions {
     float: right;
 }
